--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   permission_handler: ^12.0.1
   equatable: ^2.0.7
   dartz: ^0.10.1
+  timeago: ^3.7.1
 
 dev_dependencies:
   flutter_test:
